<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_share_entry"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_delete_entry"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom|withText" />
</menu>