...
        android:id="@+id/entryListFragment"
        android:name="androidsamples.java.journalapp.EntryListFragment"
        android:label="fragment_entry_list"
        tools:layout="@layout/fragment_entry_list">
        <action
            android:id="@+id/addEntryAction"
            app:destination="@id/entryDetailsFragment" />
        <action
            android:id="@+id/gotoInfo"
            android:exported="true"
            app:destination="@id/infoFragment" />
    </fragment>
    <fragment
...
